tests/errors/E032.zen
void main() {
    let array := {true, 3, "str"};   // E032: Type mismatch in initializer list
}